--- a/index.html
+++ b/index.html
@@ -1,106 +1,250 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-
-<body>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.com/libraries/modern-normalize">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- Header -->
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+    <header class="page-header">
+      <nav class="page-nav">
+        <a href="./index.html" class="logo link"
+          >Web<span class="studio-color">Studio</span></a
+        >
+        <ul class="menu list">
+          <li>
+            <a class="menu-item menu-link link" href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a class="menu-item menu-link link" href="./portfolio.html"
+              >Portfolio</a
+            >
+          </li>
+          <li>
+            <a class="menu-item menu-link link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="address">
+        <ul class="list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="link contact"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="link contact"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
     </header>
     <!-- Main -->
-    <main>
-        <!-- Square -->
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
-        </section>
-        <section>
-            <h2>header</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>
-                        Our goal is to identify the business problem to walk away with the
-                        perfect and creative solution.
-                    </p>
-                </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>
-                        Bring the key message to the brand's audience for the best price
-                        within the shortest possible time.
-                    </p>
-                </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>
-                        Research and confirm brands with the strongest digital growth 
-                        opportunities and minimize risk.
-                    </p>
-                </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>
-                        Design practice focused on digital experiences. We bring forth a
-                        deep passion for problem-solving.
-                    </p>
-                </li>
-            </ul>
-        </section>
-        <!-- Our Team -->
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
-                    <img src="./images/men-with-beard.jpg" width="264" alt="men with beard" />
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/men-happy.jpg" width="264" alt="happy men" />
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/woman.jpg" width="264" alt="woman" />
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/men-happy-black-hair.jpg" width="264" alt="men with black hair" />
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
-        </section>
+    <main class="page-main">
+      <!-- Square -->
+      <section class="hero">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
+      </section>
+      <section>
+        <h2 class="hidden-title"></h2>
+        <ul class="list">
+          <li>
+            <h3 class="small-title">Strategy</h3>
+            <p class="small-descr">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3 class="small-title">Punctuality</h3>
+            <p class="small-descr">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3 class="small-title">Diligence</h3>
+            <p class="small-descr">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3 class="small-title">Technologies</h3>
+            <p class="small-descr">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- Our Team -->
+      <section class="our-team">
+        <h2 class="secondary-title">Our Team</h2>
+        <ul class="list">
+          <li class="our-team-list-item">
+            <img
+              src="./images/men-with-beard.jpg"
+              width="264"
+              alt="men with beard"
+            />
+            <h3 class="small-title">Mark Guerrero</h3>
+            <p class="small-descr">Product Designer</p>
+          </li>
+          <li class="our-team-list-item">
+            <img src="./images/men-happy.jpg" width="264" alt="happy men" />
+            <h3 class="small-title">Tom Ford</h3>
+            <p class="small-descr">Frontend Developer</p>
+          </li>
+          <li class="our-team-list-item">
+            <img src="./images/woman.jpg" width="264" alt="woman" />
+            <h3 class="small-title">Camila Garcia</h3>
+            <p class="small-descr">Marketing</p>
+          </li>
+          <li class="our-team-list-item">
+            <img
+              src="./images/men-happy-black-hair.jpg"
+              width="264"
+              alt="men with black hair"
+            />
+            <h3 class="small-title">Daniel Wilson</h3>
+            <p class="small-descr">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <!-- Images -->
+        <h2 class="secondary-title">Our Portfolio</h2>
+        <ul class="list">
+          <li>
+            <a class="portfolio-list-item link" href=""
+              ><img
+                src="./images/Banking-app-interface-concept.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+              />
+              <h2 class="small-title">Banking App Interface Concept</h2>
+              <p class="small-descr">App</p>
+            </a>
+          </li>
+          <li>
+            <a class="portfolio-list-item link" href=""
+              ><img
+                src="./images/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h2 class="small-title">Cashless Payment</h2>
+              <p class="small-descr">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a class="portfolio-list-item link" href=""
+              ><img
+                src="./images/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h2 class="small-title">Meditation App</h2>
+              <p class="small-descr">App</p>
+            </a>
+          </li>
+          <li>
+            <a class="portfolio-list-item link" href=""
+              ><img
+                src="./images/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <h2 class="small-title">Taxi Service</h2>
+              <p class="small-descr">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a class="portfolio-list-item link" href=""
+              ><img
+                src="./images/screen-illustration.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h2 class="small-title">Screen Illustrations</h2>
+              <p class="small-descr">Design</p>
+            </a>
+          </li>
+          <li>
+            <a class="portfolio-list-item link" href=""
+              ><img
+                src="./images/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h2 class="small-title">Online Courses</h2>
+              <p class="small-descr">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a class="portfolio-list-item link" href=""
+              ><img
+                src="./images/instagram-stories-concept.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+              />
+              <h2 class="small-title">Instagram Stories Concept</h2>
+              <p class="small-descr">Design</p>
+            </a>
+          </li>
+          <li>
+            <a class="portfolio-list-item link" href=""
+              ><img
+                src="./images/organic-food.jpg"
+                alt="Organic Food"
+                width="360"
+              />
+              <h2 class="small-title">Organic Food</h2>
+              <p class="small-descr">Web Site</p>
+            </a>
+          </li>
+          <li>
+            <a class="portfolio-list-item link" href=""
+              ><img
+                src="./images/fresh-coffee.jpg"
+                alt="Fresh Coffee"
+                width="360"
+              />
+              <h2 class="small-title">Fresh Coffee</h2>
+              <p class="small-descr">Web Site</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- Footer -->
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>
-            Increase the flow of customers and sales for your business with digital
-            marketing & growth solutions.
-        </p>
+    <footer class="page-footer">
+      <a href="./index.html" class="logo link"
+        >Web<span class="studio-color-dark-theme">Studio</span></a
+      >
+      <p class="small-descr small-descr-dark-theme">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-</body>
-
+  </body>
 </html>
