--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="https://cdnjs.com/libraries/modern-normalize">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.com/libraries/modern-normalize"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -32,9 +35,7 @@
             <a class="menu-item menu-link link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="menu-item menu-link link" href="./portfolio.html"
-              >Portfolio</a
-            >
+            <a class="menu-item menu-link link" href="">Portfolio</a>
           </li>
           <li>
             <a class="menu-item menu-link link" href="">Contacts</a>
@@ -135,103 +136,85 @@
         <h2 class="secondary-title">Our Portfolio</h2>
         <ul class="list">
           <li>
-            <a class="portfolio-list-item link" href=""
-              ><img
-                src="./images/Banking-app-interface-concept.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-              />
-              <h2 class="small-title">Banking App Interface Concept</h2>
-              <p class="small-descr">App</p>
-            </a>
+            <img
+              src="./images/Banking-app-interface-concept.jpg"
+              alt="Banking App Interface Concept"
+              width="360"
+            />
+            <h3 class="small-title">Banking App</h3>
+            <p class="small-descr">App</p>
           </li>
           <li>
-            <a class="portfolio-list-item link" href=""
-              ><img
-                src="./images/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
-              <h2 class="small-title">Cashless Payment</h2>
-              <p class="small-descr">Marketing</p>
-            </a>
+            <img
+              src="./images/cashless-payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
+            <h3 class="small-title">Cashless Payment</h3>
+            <p class="small-descr">Marketing</p>
           </li>
           <li>
-            <a class="portfolio-list-item link" href=""
-              ><img
-                src="./images/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-              />
-              <h2 class="small-title">Meditation App</h2>
-              <p class="small-descr">App</p>
-            </a>
+            <img
+              src="./images/meditation-app.jpg"
+              alt="Meditation App"
+              width="360"
+            />
+            <h2 class="small-title">Meditation App</h2>
+            <p class="small-descr">App</p>
           </li>
           <li>
-            <a class="portfolio-list-item link" href=""
-              ><img
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
-              <h2 class="small-title">Taxi Service</h2>
-              <p class="small-descr">Marketing</p>
-            </a>
+            <img
+              src="./images/taxi-service.jpg"
+              alt="Taxi Service"
+              width="360"
+            />
+            <h2 class="small-title">Taxi Service</h2>
+            <p class="small-descr">Marketing</p>
           </li>
           <li>
-            <a class="portfolio-list-item link" href=""
-              ><img
-                src="./images/screen-illustration.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <h2 class="small-title">Screen Illustrations</h2>
-              <p class="small-descr">Design</p>
-            </a>
+            <img
+              src="./images/screen-illustration.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
+            <h2 class="small-title">Screen Illustrations</h2>
+            <p class="small-descr">Design</p>
           </li>
           <li>
-            <a class="portfolio-list-item link" href=""
-              ><img
-                src="./images/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-              />
-              <h2 class="small-title">Online Courses</h2>
-              <p class="small-descr">Marketing</p>
-            </a>
+            <img
+              src="./images/online-courses.jpg"
+              alt="Online Courses"
+              width="360"
+            />
+            <h2 class="small-title">Online Courses</h2>
+            <p class="small-descr">Marketing</p>
           </li>
           <li>
-            <a class="portfolio-list-item link" href=""
-              ><img
-                src="./images/instagram-stories-concept.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-              />
-              <h2 class="small-title">Instagram Stories Concept</h2>
-              <p class="small-descr">Design</p>
-            </a>
+            <img
+              src="./images/instagram-stories-concept.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+            />
+            <h3 class="small-title">Instagram Stories Concept</h3>
+            <p class="small-descr">Design</p>
           </li>
           <li>
-            <a class="portfolio-list-item link" href=""
-              ><img
-                src="./images/organic-food.jpg"
-                alt="Organic Food"
-                width="360"
-              />
-              <h2 class="small-title">Organic Food</h2>
-              <p class="small-descr">Web Site</p>
-            </a>
+            <img
+              src="./images/organic-food.jpg"
+              alt="Organic Food"
+              width="360"
+            />
+            <h2 class="small-title">Organic Food</h2>
+            <p class="small-descr">Web Site</p>
           </li>
           <li>
-            <a class="portfolio-list-item link" href=""
-              ><img
-                src="./images/fresh-coffee.jpg"
-                alt="Fresh Coffee"
-                width="360"
-              />
-              <h2 class="small-title">Fresh Coffee</h2>
-              <p class="small-descr">Web Site</p>
-            </a>
+            <img
+              src="./images/fresh-coffee.jpg"
+              alt="Fresh Coffee"
+              width="360"
+            />
+            <h3 class="small-title">Fresh Coffee</h3>
+            <p class="small-descr">Web Site</p>
           </li>
         </ul>
       </section>
